fix(pendaftaran): ubah info komen css

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -23,7 +23,7 @@
     cursor: pointer;
   }
 
-  /* Tambahkan gaya untuk membuat navbar responsif */
+  /* navbar responsif */
 @media (max-width: 768px) {
   .navbar-toggler {
     display: block;
