--- a/static/css/style.css
+++ b/static/css/style.css
@@ -47,3 +47,12 @@
     margin: 0;
   }
 }
+
+@media print {
+  body {
+      margin-top: 5px;
+      margin-left: 10px;
+      transform: scale(var(--scale-factor));
+      transform-origin: 0 0;
+  }
+}
